Setup app for heroku

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "web-server",
   "version": "1.0.0",
   "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts": { 
+    "start":"node src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -17,3 +17,4 @@
   },
   "description": ""
 }
+
